<resources>
    <string name="app_name">SecureVault</string>

    <string name="err_No_Hardware">Your device does not support Fingerprint Scanning.</string>
    <string name="err_No_Permission">You must enable permissions for Fingerprint scanner in Settings.</string>
    <string name="err_No_LockonPhone">You must enable a lock to your device in Settings.</string>
    <string name="err_No_Fingerprints">You must set a fingerprint in your Settings to use this feature</string>
    <string name="metRequirements">Place your finger on the scanner to access folders</string>
    <string name="fingerprintHeading">Fingerprint Authentication</string>
    <string name="fingerprintStartMessage">Place your finger on the scanner</string>

    <string name="email_address">Email Address: </string>
    <string name="password">Password: </string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="forgot_Password">Forgot Password?</string>
    <string name="no_Account">No Account? Click Here</string>
    <string name="registerMessage">Please enter in the information to make an account</string>

    <string name="alpha">ABCDEFGHIJKLMNOPQRSTUVWXY Zabcdefghijklmnopqrstuvwxyz</string>
    <string name="emailHint">Enter in your email address</string>
    <string name="passwordHint">Enter in your password</string>
    <string name="retypePassword">Retype Password:</string>
    <string name="passwordRequirement">Must be atleast 8 characters w/ number &amp; special char</string>
    <string name="fullName">Full Name:</string>
    <string name="forgotPasswordMessage">Please enter your email address and we will send you your password at the specified email.</string>
    <string name="forgotPasswordButton">Confirm</string>
    <string name="folders_text">Folders</string>
    <string name="add_folder">ADD FOLDER</string>
    <string name="folder_name">Folder Name:</string>
    <string name="file_source">File Source:</string>
    <string name="notes_text">Notes</string>
    <string name="update_not_text">Update Note</string>
    <string name="msg_no_notes">No Notes!</string>
    <string name="note_title">Note Title:</string>
    <string name="note_body">Enter in your note information here</string>
    <string name="msg_noNotes">No Notes Found</string>
    <string name="choice_Message">Please choose \'Notes\' or \'Gallery\'</string>
    <string name="notes">Notes</string>
    <string name="gallery">Gallery</string>
    <string name="new_note">New Note</string>


</resources>
