<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ForgotPassword">

    <TextView
        android:layout_width="wrap_content"
        android:padding="25sp"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:text="@string/forgotPasswordMessage"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="25sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText8"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="60dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="80dp" />

    </LinearLayout>
    <Button
        android:text="@string/forgotPasswordButton"
        android:background="@color/colorBlue"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>