<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15sp"
    android:paddingRight="15sp"
    android:paddingTop="15sp">

    <TextView android:id="@+id/notes_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/new_note"
        android:textColor="@color/colorBlue"
        android:textSize="15sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/notes_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/note_title"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorBlue"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/notes_dialog_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/note_body"
        android:maxLines="3"
        android:layout_marginTop="25sp"
        android:textColorHint="@color/colorGrey"
        android:textColor="@color/colorBlue"
        android:textSize="15sp" />

</LinearLayout>